--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import OurService from "../components/pages/landing-pages/OurService.astro";
 import AddItionalProServices from "../components/pages/landing-pages/AdditionalProServices.astro";
 import WhyUs from "../components/pages/landing-pages/WhyUs.astro.tsx";
 import SuccesStories from "../components/pages/landing-pages/SuccesStories.astro.tsx";
+import LearnCulture from "../components/pages/landing-pages/LearnCulture.astro.tsx";
 ---
 
 <Layout title="Home">
@@ -13,4 +14,5 @@ import SuccesStories from "../components/pages/landing-pages/SuccesStories.astro
   <AddItionalProServices />
   <WhyUs client:load />
   <SuccesStories client:load />
+  <LearnCulture />
 </Layout>
