--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,17 @@
 @import "tailwindcss";
 
-@import '@fontsource/mochiy-pop-one';
+@import "@fontsource/mochiy-pop-one";
 @theme {
-	--font-mochiy-pop-one: 'Mochiy Pop One', 'sans-serif';
+    --font-mochiy-pop-one: "Mochiy Pop One", "sans-serif";
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.scrollbar-hide::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.scrollbar-hide {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
 }
